fixed statIcon growth alignment
fixed statIcon growth alignment

--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,8 @@ a{
     /*width:800px;
     height:450px;*/
     height: 40vh;
-    max-width: 30vw;
+    max-width: 25vw;
+    /*min-width: 15vw;*/
 
     /*this chunk is all border control*/
     border-radius: 4%;
@@ -333,8 +334,8 @@ a{
     border-left: 0px; 
 
     grid-area: heroPic;
-    /*position:fixed; /*for when we have multiple case studies to scroll /mobile*/
-    transform: translate(9vw,0px); /*manual alignments!*/
+    position:initial;
+    margin-left: 9vw;
     z-index: -1; /*somewhere along border creation, heroPic started trumping topNav*/
 }
 #heroPic:hover{
@@ -370,7 +371,7 @@ a{
     /*for js targeting*/
 }
 #statNumLeft{
-    margin-top: 12vh;
+    margin-top: 14vh;
 }
 #statTextLeft{
     margin-top: -4vh;
@@ -379,7 +380,7 @@ a{
     /*for js targeting*/
 }
 #statNumRight{
-    margin-top: 12vh;
+    margin-top: 14vh;
 }
 #statTextRight{
     margin-top: -4vh;
@@ -387,8 +388,8 @@ a{
 
 .statIcon{
     width: 60px;
-    position: absolute;
     transform:translate(-30px,0px);
+    position: absolute;
 
     transition-property: all;
     transition-duration: 0.15s;
@@ -533,12 +534,12 @@ a{
 @media all and (max-width: 500px){
     
     #bodyDisplay{
-        grid-template-rows:     100px       125px            1600px      100px     ;
+        grid-template-rows:     50px       100px            1000px      70px     ;
         grid-template-areas:    "topNav"    "bannerQuote"   "bodyMain"  "botNav";
     }
 
     #topNav{
-        height: 120px;
+        height: 70px;
 
         grid-template-rows:     1fr;
         grid-template-columns:  1fr         1fr         3fr        ;
@@ -554,14 +555,50 @@ a{
         grid-column-gap: 0.5%;
         grid-row-gap:    0.5%;*/
 
-        grid-template-rows:     .25fr         3fr          .25fr            6fr             .25fr        ;
+        grid-template-rows:     10vh         75vh          12vh            100px             10vh        ;
         grid-template-areas:    "nullLeft"  "heroSpace"  "nullCenter"   "detailColumn"  "nullRight";
+    }
+
+    #heroPic{
+        max-width: 60vw;
+        margin-left: 20vw;
+        /*position: sticky;
+        top: 10px;*/
+    }
+    
+    #heroSpace{
+        /*grid-area: heroSpace;
+        display: grid;*/
+        grid-template-columns: 29vw 4vw 29vw;
+        grid-template-rows: 40vh 10vh 20vh;
+        grid-template-areas:
+            "heroPic heroPic heroPic"
+            "heroText heroText heroText"
+            "heroStatLeft heroStatGap heroStatRight";
+    }
+
+    .card{
+        width: 90vw;
+        display: grid;
+        grid-template-columns: 65vw 20vw;
+        grid-template-rows: 5vh 20vh;
+        /*grid-template-areas:    "cardTitle cardPic"
+                                "cardDetails cardPic";
+        grid-column-gap: 4%;
+        grid-row-gap:    2%;*/
     }
     
     .cardPic{
-        width: 70%;
+        width: 40vw;
         /*margin:2%;
         text-align: center;
         grid-area: cardPic;*/
+    }
+    
+    #statNumLeft{
+        margin-top: 60px;
+    }
+    #statNumRight{
+        margin-top: 60px;
     }
 }
